Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove [Author::Plicease::PrePodWeaver] from bundle
  - Merge [Author::Plicease::InstallerPerlVersion] into [Author::Plicease::SpecialPrereqs]
  - The optional behavior inside [Author::Plicease::InstallerPerlVersion] is
    not on by default via [Author::Plicease::SpecialPrereqs]
  - Merge [Author::Plicease::Recommend] into [Author::Plicease::SpecialPrereqs]
  - Merge [Author::Plicease::FiveEight] into [Author::Plicease::SpecialPrereqs]

1.71      2015-05-27 15:23:38 -0400
  - Added scp_dest and url options to [Author::Plicease::Upload]
  - Added example/unbundle.pl for unbundling
  - Removed Dist::Zilla::Plugin::Author::Plicease::OSPrereqsNot
  - Removed Dist::Zilla::Plugin::Author::Plicease::TransformTravis
  - Added test for minting profile
  - Removed Dist::Zilla::Plugin::Author::Plicease::Init as it had been quitely deprecated for a long time

1.70      2015-05-07 09:08:31 -0400
  - Remove xt/release/build_environment.t in favor of :version in dist.ini
  - Use filename_match in Test::Version 2.00 to skip ConfigData.pm

1.69      2015-03-03 21:33:50 -0500
  - Modules that require Moo shall require 2.0

1.68      2015-03-03 21:11:22 -0500
  - Remove base as a prereq

1.67      2015-02-21 14:57:13 -0500
  - Remove Test::Vars based release test.  It seemed like good idea at
    the time, but in practice it has produced too many false postiives.

1.66      2015-01-26 09:40:46 -0500
  - [Author::Plicease::Thanks] now uses capitalization
    Trent Reznor is a fadad memory...

1.65      2015-01-23 07:43:56 -0500
  - default minting profile removes base as explicit prereq

1.64      2015-01-15 06:44:26 -0500
  - update prereqs for consistent builds

1.63      2015-01-09 15:41:46 -0500
  - [@Author::Plicease] allow_dirty is passed on to [@Git]

1.62      2015-01-07 14:47:05 -0500
  - escape < and > in AUTHOR / thanks section

1.61      2014-12-30 13:56:48 -0500
  - Make CPANFile part of the default [@Author::Plicease]